# mini

./: Cargo.toml  README.md
crates/mini-agent-cli/: Cargo.toml
crates/mini-agent-cli/src/: main.rs
crates/mini-agent-core/: Cargo.toml
crates/mini-agent-core/assets/modes/: shell.md
crates/mini-agent-core/assets/plugins/: codex-computer-use.md  memories.md  subagents.md
crates/mini-agent-core/src/: agent.rs  auth.rs  config.rs  lib.rs  model.rs  model_auth.rs  model_provider.rs  model_request.rs  model_transport.rs  plugin.rs  prompt.rs  server.rs  tool.rs
crates/mini-agent-tui/: Cargo.toml
crates/mini-agent-tui/src/: commands.rs  lib.rs  render.rs  runtime.rs  sessions.rs  text.rs
crates/miniscient/: Cargo.toml
crates/miniscient/src/: main.rs  mcp.rs
examples/adapters/: miniscient-imessage.py  miniscient-imessage.sh  miniscient-mail.sh
examples/modes/: default.md  review.md
examples/plugins/: jj.md  macos-control.md  subagents.md
src/: main.rs
