[package]
name = "mini-agent-cli"
edition.workspace = true
license.workspace = true
version.workspace = true
description.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "mini"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
mini-agent-core = { package = "viridian-mini-core", path = "../mini-agent-core", version = "0.1.0" }
mini-agent-tui = { package = "viridian-mini-tui", path = "../mini-agent-tui", version = "0.1.0" }
reqwest = { version = "0.12.22", default-features = false, features = ["blocking", "rustls-tls"] }
serde_json = "1.0.140"
