[package]
name = "mini-agent-tui"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.98"
crossterm = "0.29.0"
mini-agent-core = { path = "../mini-agent-core" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
syntect = "5.3.0"
unicode-width = "0.2.1"
