[package]
name = "viridian-mini-tui"
edition.workspace = true
license.workspace = true
version.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.98"
crossterm = "0.29.0"
mini-agent-core = { package = "viridian-mini-core", path = "../mini-agent-core", version = "0.1.0" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
syntect = "5.3.0"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.1"
