[package]
name = "miniscient"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Always-on local server for mini agent conversations"
repository.workspace = true

[[bin]]
name = "miniscient"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
mini-agent-core = { package = "viridian-mini-core", path = "../mini-agent-core", version = "0.1.0" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
